# sidequest-landing

./: .dockerignore  .gitignore  .vercelignore  CLAUDE.md  ONBOARDING.md  README.md  ds.html  index.html  quiz.html  vercel.json
apps/: DEPLOY.md
apps/api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
apps/api/app/: config.py  deps.py  main.py
apps/api/app/models/: __init__.py  schemas.py
apps/api/app/routers/: admin.py  auth.py  chat.py  checkout.py  conferences.py  curate.py  events.py  health.py  me.py  webhooks.py
apps/api/app/scraper/: __init__.py  base.py  luma_runner.py  registry.py  run.py  scheduler.py
apps/api/app/scraper/sources/: luma.py  token2049.py
apps/api/app/services/: admin_repo.py  catalog.py  chat.py  chat_store.py  curate.py  curations_store.py  entitlements_store.py  llm.py  openrouter.py  pins_store.py  polar_client.py  prompts.py  schedule_merge.py  scheduler_settings_repo.py  scrape_sources_repo.py  seed_data.py  supabase.py
apps/api/scripts/: mint_test_jwt.py  set_admin.sql  smoke.sh
apps/api/supabase/migrations/: 0001_init.sql  0002_seed_token2049.sql  0003_grants.sql  0004_conferences_is_active.sql  0005_scrape_sources.sql  0006_scheduler_settings.sql  0007_polar_entitlements.sql
apps/api/tests/: test_admin_lock.py  test_auth_and_schedule.py  test_chat_context_builder.py  test_checkout.py  test_conferences_read.py  test_curate.py  test_health.py  test_luma_runner.py  test_luma_scraper.py  test_pin_overlay.py  test_polar_webhook.py  test_scheduler.py  test_scheduler_endpoints.py  test_scrape_sources_due.py  test_scrape_sources_update.py
apps/web/: .env.example  .gitignore  README.md  (+8 more)
design-system/: ds.html
quiz-app/: README.md  index.html  vite.config.ts
(+65 files in other folders)
